syntax="proto3";

package calculator;

option go_package="calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse{
  int32 sum_result = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

service CalculatorService{
rpc Sum(SumRequest) returns (SumResponse);
rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse);
}